syntax="proto3";

package webhook.v1;

message LineWebhookRequest {
  string description = 1;
  repeated LineWebhookEvent events = 2;
}

message LineWebhookEvent {
  string type = 1;
  LineWebhookMessage message = 2;
}

message LineWebhookMessage {
  string type = 1;
  string id = 2;
  string text = 3;
  string reply_token = 4;
  string webhook_event_id = 5;
  int32 timestamp = 6;
  LineWebhookSource source = 7;
}

message LineWebhookSource {
  string type = 1;
  string user_id = 2;
}

message LineWebhookResponse{
  string text = 1;
}

service LineWebhookService {
  rpc LineWebhook(LineWebhookRequest) returns (LineWebhookResponse);
}
